# jira-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  mcp_config.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
jira_mcp_server/: __main__.py  confluence_client.py  jira_client.py  server.py
jira_mcp_server/tools/: confluence_tools.py  jira_tools.py
src/: server.py
